# UAHRKrakensLidar

./: CMakeLists.txt  README.md  package.xml
include/uahrkrakens_lidar/: analize_scan_utils.cpp  analize_scan_utils.hpp  obstacle.hpp  point2d.hpp  polar.hpp
src/: analize_scan_node.cpp
tests/: FilterClustersByLength.cpp  GetClusterCentroid.cpp  GetClusterLength.cpp  GetClusters.cpp  LaserRangeTo2dPoints.cpp  TrackObstacle.cpp  scan_utils_test.cpp
